Fix the hr's and the img alignment

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -89,7 +89,7 @@ div.intro p#datestamp + p:first-letter {
 }
 
 hr {
-	margin-top: -3px;
+	margin-top: -7px;
 	border-color: black;
 }
 
@@ -122,7 +122,7 @@ section#profiles ul li {
     text-align: center;
 }
 
-section#profiles ul li p {
+section#profiles ul li div p {
     text-align: left;
 }
 
